feat: 增加发布记录、正式测试环境同步、回退版本功能
